@@ -6,6 +6,7 @@ module RubyWarrior
       end
       
       def perform(direction = :forward)
+        verify_direction(direction)
         if @unit.position
           @unit.say "walks #{direction}"
           if space(direction).empty?
