@@ -5,7 +5,7 @@
 
 description "What's that ticking? Some captives have a timed bomb at their feet!"
 tip "Hurry and rescue captives first that have space.ticking?, they'll soon go!"
-clue "Avoid fighting enemies at first. Go around them until you've rescued all of the ticking captives."
+clue "Avoid fighting enemies at first. Use warrior.listen and space.ticking? and quickly rescue those captives."
 
 time_bonus 50
 ace_score 108
